--- a/lab8.ipynb
+++ b/lab8.ipynb
@@ -228,7 +228,87 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Asoaciamos cada feature con su respectiva imagen."
+        "Asociamos cada feature con su respectiva imagen."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Obtener las imágenes correspondientes al dataset\n",
+        "image_paths = dataset.file_paths\n",
+        "\n",
+        "# Asociar cada feature vector con su imagen correspondiente\n",
+        "image_features_mapping = dict(zip(image_paths, features))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Defino una función similitud, utilizo cosine_similarity:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def cosine_similarity(v1, v2):\n",
+        "  return np.dot(v1, v2) / (np.linalg.norm(v1) * np.linalg.norm(v2))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Ejemplo de cómo calcular similitud con `cosine_similarity`:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "path_1 = np.random.choice(image_paths)\n",
+        "path_2 = np.random.choice(image_paths)\n",
+        "\n",
+        "v1 = image_features_mapping[path_1]\n",
+        "v2 = image_features_mapping[path_2]\n",
+        "\n",
+        "print(\"Similitud:\", cosine_similarity(v1, v2))\n",
+        "\n",
+        "image_1 = plt.imread(path_1)\n",
+        "image_2 = plt.imread(path_2)\n",
+        "\n",
+        "plt.figure(figsize=(10, 5))\n",
+        "\n",
+        "# Subplot para la primera imagen\n",
+        "plt.subplot(1, 2, 1)\n",
+        "plt.imshow(image_1)\n",
+        "plt.title(\"Imagen 1\")\n",
+        "plt.axis('off')\n",
+        "\n",
+        "# Subplot para la segunda imagen\n",
+        "plt.subplot(1, 2, 2)\n",
+        "plt.imshow(image_2)\n",
+        "plt.title(\"Imagen 2\")\n",
+        "plt.axis('off')\n",
+        "\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Completar el lab con la búsqueda por similitud.\n",
+        "\n",
+        "Seleccionar una imagen al azar y buscar las 10 imágenes más similares."
       ]
     }
   ],
