--- a/lab8.ipynb
+++ b/lab8.ipynb
@@ -141,6 +141,7 @@
         "    label_mode=None,\n",
         "    image_size=(IMAGE_HEIGHT, IMAGE_WIDTH),\n",
         "    batch_size=BATCH_SIZE\n",
+        "    shuffle=False\n",
         ")\n"
       ]
     },
