add missing comma

--- a/lab8.ipynb
+++ b/lab8.ipynb
@@ -140,7 +140,7 @@
         "    TRAIN_DATA_DIRECTORY,\n",
         "    label_mode=None,\n",
         "    image_size=(IMAGE_HEIGHT, IMAGE_WIDTH),\n",
-        "    batch_size=BATCH_SIZE\n",
+        "    batch_size=BATCH_SIZE,\n",
         "    shuffle=False\n",
         ")\n"
       ]
